--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "cross-env NODE_ENV=production parcel build src/index.html"
   },
   "dependencies": {
     "react": "^16.5.0",
@@ -12,6 +12,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "cross-env": "^5.2.0",
     "parcel-bundler": "^1.9.7",
     "react-hot-loader": "^4.3.6"
   }
