Remove unused dependency (module resolver). It works built-in

--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,4 @@
 {
   "presets": ["stage-0", "env", "react"],
-  "plugins": [
-    "react-hot-loader/babel",
-    ["module-resolver", {
-      "alias": {
-        "components": "./src/components"
-      }
-    }]
-  ]
+  "plugins": ["react-hot-loader/babel"]
 }
