--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
     "dev": "parcel src/index.html",
     "build": "cross-env NODE_ENV=production parcel build src/index.html"
   },
+  "alias": {
+    "components": "./src/components"
+  },
   "dependencies": {
     "react": "^16.5.0",
     "react-dom": "^16.5.0"
   },
   "devDependencies": {
-    "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
